# javascript

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  run.py  test-vm.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: rust.yml  test262-all.yml  test262-py.yml  test262.yml
benches/: bigint_bench.rs  promise_benchmarks.rs
ci/: compose_test.js  run_test262.sh  runner.js
ci/feature_probes/: AggregateError.js  Array.fromAsync.js  ArrayBuffer.js  Array_prototype_at.js  Array_prototype_flat.js  Array_prototype_flatMap.js  Array_prototype_includes.js  Array_prototype_values.js  Atomics.js  Atomics.pause.js  Atomics_pause.js  Atomics_waitAsync.js  BigInt.js  DataView.js  DataView_prototype_getFloat32.js  DataView_prototype_getFloat64.js  DataView_prototype_getInt16.js  DataView_prototype_getInt32.js  DataView_prototype_getInt8.js  DataView_prototype_getUint16.js  DataView_prototype_getUint32.js  DataView_prototype_setUint8.js  Error_isError.js  FinalizationRegistry.js  Float16Array.js  Float32Array.js  Float64Array.js  Int16Array.js  Int32Array.js  Int8Array.js  IsHTMLDDA.js  Map.js  Math.sumPrecise.js  Object_fromEntries.js  Object_hasOwn.js  Object_is.js  Promise.js  Promise_allSettled.js  Promise_any.js  Promise_prototype_finally.js  (+138 more)
examples/: js.rs  rust_js.rs
js/: Cargo.toml
js-scripts/: arrow_returns_promise.js  async_generator_resume.js  async_generator_throw_return.js  async_n_throw_async_tests.js  async_n_throw_async_tests_regression.js  atomics_test.js  atomics_wait_notify_test.js  bigint_test.js  boxed_types_tests.js  check-comments-a5.js  check-comments-a6.js  check_dataview_global.js  classes_usage.js  closure_i_repro.js  comprehensive_dataview_test.js  dataview_properties_test.js  date_tests.js  date_utc_n_get_time_zone_offset.js  debug_for_await_interleaved.js  debug_super_call_fn.js  destructuring_assignments.js  es6_module.mjs  es6_module_export.js  es6_module_test_01.js  es6_module_test_02.js  es6_module_test_03.js  eval_direct_indirect_tests.js  expressions_n_operators.js  for-in-tests.js  function_arguments_callee.js  function_object.js  globel_assert.js  handlers_repro.js  indexed_collections.js  internal_forof_helper_hidden.js  json_tests.js  keyed_collections.js  loops_n_iteration.js  map_tests.js  microtask_test.js  (+62 more)
js/src/: main.rs
src/: core.rs  error.rs  js_abstract_module_source.rs  js_agent.rs  js_array.rs  js_assert.rs  js_async.rs  js_async_generator.rs  js_bigint.rs  js_boolean.rs  js_class.rs  js_console.rs  js_date.rs  js_disposable.rs  js_finalization_registry.rs  js_function.rs  js_generator.rs  js_iterator_helpers.rs  js_json.rs  js_map.rs  js_math.rs  js_module.rs  js_number.rs  js_object.rs  js_os.rs  js_promise.rs  js_proxy.rs  js_reflect.rs  js_regexp.rs  js_set.rs  js_shadow_realm.rs  js_std.rs  js_string.rs  js_symbol.rs  js_testintl.rs  js_typedarray.rs  js_weakmap.rs  js_weakref.rs  js_weakset.rs  lib.rs  (+7 more)
src/core/: compiler.rs  descriptor.rs  eval.rs  ffi.rs  function_id.rs  gc.rs  js_error.rs  mod.rs  number.rs  opcode.rs  parser.rs  property_descriptor.rs  property_key.rs  statement.rs  token.rs  value.rs  vm.rs
src/core/vm/: bigint.rs  dataview.rs  date.rs  intl.rs  regexp.rs  runner.rs  temporal.rs  typedarray.rs  uri.rs
src/js_std/: mod.rs  sprintf.rs  tmpfile.rs
tests/: accessor_tests.rs  array_literals.rs  async_await_regressions.rs  async_await_tests.rs  async_manual.rs  async_regression_tests.rs  basic_arithmetic.rs  bigint_additional.rs  bigint_api.rs  bigint_asintn.rs  bigint_comparison_edgecases.rs  bigint_edgecases.rs  bigint_number_interop.rs  bigint_parity.rs  bigint_relational_additional.rs  bigint_relational_more_edgecases.rs  bigint_tests.rs  boxed_prototype_compare.rs  boxed_prototype_debug.rs  boxed_prototype_equalities.rs  boxed_prototypes_fixed.rs  builtin_functions.rs  class_extends_expr_parse.rs  class_tests.rs  comment_tests.rs  compound_assign.rs  compound_assign_edgecases.rs  conditional_expressions.rs  const_tests.rs  control_flow.rs  date_tests.rs  destructuring_defaults.rs  destructuring_tests.rs  equality_concat.rs  error_to_string_tests.rs  es6_modules.rs  for_of_destructuring.rs  function_call_env_edgecases.rs  functions.rs  generator_super_tests.rs  (+63 more)
