[package]
name = "javascript"
version = "0.1.12"
edition = "2024"
authors = ["ssrlive"]
license = "MIT"
description = "A JavaScript engine implementation in Rust"
repository = "https://github.com/ssrlive/javascript"
homepage = "https://crates.io/crates/javascript"
documentation = "https://docs.rs/javascript"
readme = "README.md"
keywords = ["javascript", "engine", "interpreter", "runtime"]
categories = ["development-tools", "parsing"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
indexmap = "2.12.1"
log = "0.4.29"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regress = { version = "0.10", features = ["utf16"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

[dev-dependencies]
clap = { version = "4.5.53", features = ["derive", "cargo"] }
criterion = { version = "0.8.0", features = ["html_reports"] }
ctor = "0.6.3"
env_logger = { version = "0.11.8" }
rustyline = "17.0.2"

[[example]]
name = "js"
path = "examples/js.rs"

[[bench]]
name = "promise_benchmarks"
path = "benches/promise_benchmarks.rs"
harness = false

[[bench]]
name = "bigint_bench"
path = "benches/bigint_bench.rs"
harness = false
