[package]
name = "javascript"
version = "0.1.14"
edition = "2024"
authors = ["ssrlive"]
license = "MIT"
description = "A JavaScript engine implementation in Rust"
repository = "https://github.com/ssrlive/javascript"
homepage = "https://crates.io/crates/javascript"
documentation = "https://docs.rs/javascript"
readme = "README.md"
keywords = ["javascript", "engine", "interpreter", "runtime"]
categories = ["development-tools", "parsing"]

[workspace]
members = ["js"]

[features]
default = ["os", "std"]
os = ["libc", "windows-sys"]
std = []

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
crossbeam-channel = "0.5.15"
gc-arena = { git = "https://github.com/kyren/gc-arena.git", rev = "75671ae" }
indexmap = "2.13.0"
log = "0.4.29"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regress = { version = "0.10", features = ["utf16"], git = "https://github.com/ssrlive/regress.git", rev = "26fe374" }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
thiserror = "2.0.18"
unicode-normalization = "0.1.25"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.182", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", optional = true, features = ["Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

# [patch.crates-io]
# regress = { path = "regress-patched" }

[dev-dependencies]
clap = { version = "4.5.60", features = ["derive", "cargo"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
ctor = "0.6.3"
env_logger = { version = "0.11.9" }
rustyline = "17.0.2"

[[bench]]
name = "promise_benchmarks"
path = "benches/promise_benchmarks.rs"
harness = false

[[bench]]
name = "bigint_bench"
path = "benches/bigint_bench.rs"
harness = false
