[package]
name = "javascript"
version = "0.2.0"
edition = "2024"
authors = ["ssrlive"]
license = "MIT"
description = "A JavaScript engine implementation in Rust"
repository = "https://github.com/ssrlive/javascript"
homepage = "https://crates.io/crates/javascript"
documentation = "https://docs.rs/javascript"
readme = "README.md"
keywords = ["javascript", "js", "engine", "interpreter", "runtime"]
categories = ["development-tools", "parsing"]

[workspace]
members = ["js"]

[features]
default = ["os", "std"]
os = ["libc", "windows-sys"]
std = []

[dependencies]
bitflags = { version = "2.11.1", default-features = false, features = [] }
chrono = { version = "0.4.44", features = ["serde"] }
crossbeam-channel = "0.5.15"
gc-arena = { version = "0.6.0", features = ["indexmap"] }
indexmap = "2.14.0"
log = "0.4.29"
num-bigint = "0.4.6"
num-traits = "0.2.19"
regress = { version = "0.11", git = "https://github.com/ridiculousfish/regress.git", rev = "e3dead4", features = [
    "utf16",
] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
temporal_rs = "0.2.3"
thiserror = "2.0.18"
unicode-normalization = "0.1.25"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.185", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", optional = true, features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
ctor = "1.0.7"
env_logger = { version = "0.11.10" }

[[bench]]
name = "promise_benchmarks"
path = "benches/promise_benchmarks.rs"
harness = false

[[bench]]
name = "bigint_bench"
path = "benches/bigint_bench.rs"
harness = false
