[package]
name = "js"
version = "0.1.14"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.59", features = ["derive", "cargo"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
ctor = "0.6.3"
env_logger = { version = "0.11.9" }
javascript = { path = "../", features = ["os", "std"] }
rustyline = "17.0.2"
