[package]
name = "js"
version = "0.1.14"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.0", features = ["derive", "cargo"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
ctor = "0.8.0"
env_logger = { version = "0.11.10" }
javascript = { path = "../", features = ["os", "std"] }
rustyline = "18.0.0"
